--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- Header section Starts-->
+<div class="p-grid p-col-12">
 <mat-card>
   <form [formGroup]="employeForm">
     <!-- form 1 -->
@@ -119,7 +120,9 @@
     </div>
   </form>
 </mat-card>
+</div>
 <br>
+<div class="p-grid p-col-12">
 <mat-card>
 
   <div class="p-grid">
@@ -318,6 +321,7 @@
 
 
 </mat-card>
+</div>
 <p-toast [baseZIndex]="500000"></p-toast>
 
 <p-confirmDialog header="Confirmation" [baseZIndex]="10000" icon="pi pi-exclamation-triangle"></p-confirmDialog>
